<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>lu.nowina.apps</groupId>
	<artifactId>nexu</artifactId>
	<version>1.10-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>NexU</name>

	<modules>
		<module>nexu-core</module>
		<module>nexu-rest-plugin</module>
		<module>nexu-api</module>
		<module>nexu-proxy</module>
		<module>nexu-app</module>
		<module>nexu-model</module>
		<module>nexu-util</module>
		<module>nexu-bundle</module>
		<module>nexu-standalone</module>
		<module>nexu-public-object-model</module>
		<module>nexu-https-plugin</module>
	</modules>

	<properties>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<encoding>UTF-8</encoding>
		<skip.package>false</skip.package>
		<dss.version>4.6.0</dss.version>
        <maven.release.plugin.version>2.5.3</maven.release.plugin.version>
        <slf4j.version>1.7.12</slf4j.version>
        <jna.version>4.2.2</jna.version>
	</properties>

    <scm>
        <developerConnection>scm:git:https://github.com/nowina-solutions/nexu.git</developerConnection>
        <tag>HEAD</tag>
    </scm>
    
	<licenses>
		<license>
			<name>European Union Public Licence (EUPL) v1.1</name>
			<url>http://ec.europa.eu/idabc/eupl.html</url>
		</license>
	</licenses>

	<repositories>
		<repository>
            <id>joinup-dss-thirdparty</id>
            <url>http://joinup.ec.europa.eu/site/sd-dss/maven2</url>
        </repository>
		<repository>
			<id>joinup</id>
			<name>Joinup</name>
			<url>https://joinup.ec.europa.eu/nexus/content/groups/public/</url>
		</repository>
	</repositories>

	<distributionManagement>
		<repository>
			<id>joinup-nexus</id>
			<url>dav:https://joinup.ec.europa.eu/webdav/sd-dss/www/maven2</url>
		</repository>
		<snapshotRepository>
			<id>joinup-nexus</id>
			<url>dav:https://joinup.ec.europa.eu/webdav/sd-dss/www/maven2</url>
		</snapshotRepository>
	</distributionManagement>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.11</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>commons-codec</groupId>
				<artifactId>commons-codec</artifactId>
				<version>1.10</version>
			</dependency>
			<dependency>
				<groupId>net.lingala.zip4j</groupId>
				<artifactId>zip4j</artifactId>
				<version>1.3.2</version>
			</dependency>
            <dependency>
                <groupId>net.java.dev.jna</groupId>
                <artifactId>jna</artifactId>
                <version>${jna.version}</version>
            </dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>0.7.4.201502262128</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>sonar-maven-plugin</artifactId>
					<version>2.6</version>
				</plugin>
				<plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>2.5.3</version>
                </plugin>
			</plugins>
		</pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>${maven.release.plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-install-plugin</artifactId>
                <version>2.5.2</version>
                <inherited>false</inherited>
                <executions>
                    <execution>
                        <id>install-dorkbox</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>install-file</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <file>nexu-standalone/lib/SystemTray-3.0.RC6.jar</file>
                    <sources>nexu-standalone/lib/SystemTray-3.0.RC6-sources.jar</sources>
                    <groupId>com.dorkbox</groupId>
                    <artifactId>SystemTray</artifactId>
                    <version>3.0.RC6</version>
                    <packaging>jar</packaging>
                </configuration>
            </plugin>
        </plugins>
		<extensions>
			<extension>
				<groupId>org.apache.maven.wagon</groupId>
				<artifactId>wagon-webdav-jackrabbit</artifactId>
        		<version>2.2</version>
        	</extension>
		</extensions>
	</build>

	<profiles>

		<profile>
			<id>no_package</id>
			<properties>
				<skip.package>true</skip.package>
			</properties>
		</profile>

		<profile>
			<id>rebel</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.zeroturnaround</groupId>
						<artifactId>jrebel-maven-plugin</artifactId>
						<version>1.1.5</version>
						<executions>
							<execution>
								<id>generate-rebel-xml</id>
								<phase>process-resources</phase>
								<goals>
									<goal>generate</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>

		</profile>

	</profiles>

</project>